--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,7 +1,7 @@
-<% provide(:title, "Help") %>
+<% provide(:title, "About") %>
 <h1>Twitta</h1>
 <p>
-  This is the help page for the
+  This is the about page for the
   <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
   sample application.
 </p>
