--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -19,3 +19,7 @@
 
 @import "font-awesome-sprockets"
 @import "font-awesome"
+
+html, html a
+    -webkit-font-smoothing: antialiased !important
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.004) !important
