--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,31 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  
+  <nav class="navbar navbar-inverse navbar-static-top">
+    <div class='container'>
+      
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        
+        <%= link_to root_path, class: 'navbar-brand' do %>
+          <i class="fa fa-twitter"></i>
+          Twitta
+        <% end %>
+        
+      </div>
+      
+    </div>
+  </nav>
 
-<div class="container">
-  <%= yield %>
-</div>
+  <div class="container">
+    <%= yield %>
+  </div>
 
 </body>
 </html>
