--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -21,5 +21,14 @@
 @import "font-awesome"
 
 html, html a
-    -webkit-font-smoothing: antialiased !important
-    text-shadow: 1px 1px 1px rgba(0,0,0,0.004) !important
+  -webkit-font-smoothing: antialiased !important
+  text-shadow: 1px 1px 1px rgba(0,0,0,0.004) !important
+    
+#logo
+  max-width: 40%
+  padding: 0
+  &:hover
+    max-width: 41%
+
+#main-container
+  margin-top: 6em
