--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,35 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name=viewport content="width=device-width, initial-scale=1">
   <title><%= full_title(yield(:title)) %></title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <!--[if lt IE 9]>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
+      </script>
+  <![endif]-->
 </head>
 <body>
   
-  <nav class="navbar navbar-inverse navbar-static-top">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class='container'>
       
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav-collapse">
           <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
+          <i class="fa fa-bars" style="color:white;"></i>
         </button>
         
         <%= link_to root_path, class: 'navbar-brand' do %>
-          <i class="fa fa-twitter"></i>
-          Twitta
+          
+          <%= image_tag('twitta.png', id: 'logo') %>
         <% end %>
-        
-      </div>
+      </div><!-- end navbar header -->
+    
+      <div class="collapse navbar-collapse" id="main-nav-collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="text-center"><%= link_to "Home", "#" %></li>
+          <li class="text-center"><%= link_to "Help", "#" %></li>
+          <li class="text-center"><%= link_to "Log in", "#" %></li>
+        </ul>
+      </div><!-- end .navbar-collapse -->
       
-    </div>
-  </nav>
+    </div><!-- end container -->
+  </nav><!-- end nav -->
 
-  <div class="container">
+  <div class="container" id="main-container">
     <%= yield %>
   </div>
 
