--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,11 @@
 <% provide(:title, "Home") %>
-<h1>Twitta</h1>
-<p>
-  This is the home page for the
-  <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-  sample application.
-</p>
+<div class="text-center jumbotron">
+  <h1>Welcome to Twitta</h1>
+  
+  <h2>
+    This is a <em>Twitter-esque</em> Rails application.<br>
+    <small>Created by <%= link_to "Yuri Ramocan", "http://yuriramocan.com/" %></small>
+  </h2>
+  
+  <%= link_to "Sign up now!", "#", class: "btn btn-lg btn-primary" %>
+</div>
