--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -20,15 +20,37 @@
 @import "font-awesome-sprockets"
 @import "font-awesome"
 
+/* universal */
+
 html, html a
-  -webkit-font-smoothing: antialiased !important
-  text-shadow: 1px 1px 1px rgba(0,0,0,0.004) !important
+	-webkit-font-smoothing: antialiased !important
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.004) !important
     
 #logo
-  max-width: 40%
-  padding: 0
-  &:hover
-    max-width: 41%
+	max-width: 40%
+	padding: 0
+	&:hover
+		max-width: 41%
 
 #main-container
-  margin-top: 6em
+	margin-top: 6em
+
+/* typography */
+
+h1, h2, h3, h4, h5, h6
+	line-height: 1
+
+h1
+	font-size: 3em
+	letter-spacing: -2px
+
+h2
+	font-size: 1.5em
+	letter-spacing: -1px
+	margin-bottom: 30px
+	font-weight: normal
+	color: #777
+
+p
+	font-size: 1.1em
+	line-height: 1.7em
