--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,7 +3,7 @@
   <h1>Welcome to Twitta</h1>
   
   <h2>
-    This is a <em>Twitter-esque</em> Rails application.<br>
+    This is a <em>Twitter-esque</em> Rails application<br>
     <small>Created by <%= link_to "Yuri Ramocan", "http://yuriramocan.com/" %></small>
   </h2>
   
