--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -20,9 +20,19 @@
 @import "font-awesome-sprockets"
 @import "font-awesome"
 
+// Google Fonts
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,600,700|Roboto:400,500,700)
+
 /* universal */
 
+$primary-color: #222
+$secondary-color: #5e5e5e
+
+$roboto: 'Roboto', sans-serif
+$open-sans: 'Open Sans', sans-serif
+
 html, html a
+	font-family: $open-sans
 	-webkit-font-smoothing: antialiased !important
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.004) !important
     
@@ -38,19 +48,39 @@ html, html a
 /* typography */
 
 h1, h2, h3, h4, h5, h6
+	font-family: $roboto
 	line-height: 1
 
 h1
 	font-size: 3em
-	letter-spacing: -2px
+	letter-spacing: 0px
+	color: $primary-color
 
 h2
 	font-size: 2em
 	letter-spacing: -1px
 	margin-bottom: 30px
-	font-weight: normal
-	color: #777
 
 p
 	font-size: 1.1em
 	line-height: 1.7em
+
+/* Home */
+
+.feature
+	margin-top: 2em
+
+.footer
+	position: fixed
+	left: 0
+	bottom: 0
+	width: 100%
+	/* Set the fixed height of the footer here */
+	background-color: #f4f4f4
+	a
+		&:link, &:hover, &:active, &:visited
+			color: $secondary-color
+
+	p
+		margin-top: 1em
+		font-size: 1em
