--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta name=viewport content="width=device-width, initial-scale=1">
+  <%= favicon_link_tag 'twitta.ico' %>
   <title><%= full_title(yield(:title)) %></title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -14,6 +15,7 @@
 
   <div class="container" id="main-container">
     <%= yield %>
+    <%= render 'layouts/footer' %>
   </div>
 
 </body>
