Add contact page and update font integration

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,8 +5,8 @@
     </div>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li class="text-center"><%= link_to "About", "#" %></li>
-        <li class="text-center"><%= link_to "Contact", "#" %></li>
+        <li class="text-center"><%= link_to "About", about_path %></li>
+        <li class="text-center"><%= link_to "Contact", contact_path %></li>
         <li class="text-center"><%= link_to "News", "#" %></li>
       </ul>
     </nav>
