--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,8 +15,8 @@
   
     <div class="collapse navbar-collapse" id="main-nav-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li class="text-center"><%= link_to "Home", "#" %></li>
-        <li class="text-center"><%= link_to "Help", "#" %></li>
+        <li class="text-center"><%= link_to "Home", root_path %></li>
+        <li class="text-center"><%= link_to "Help", help_path %></li>
         <li class="text-center"><%= link_to "Log in", "#" %></li>
       </ul>
     </div><!-- end .navbar-collapse -->
