Update font integration for heroku

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -21,7 +21,7 @@
 @import "font-awesome"
 
 // Google Fonts
-@import url('http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,600,700|Roboto:400,500,700')
+@import url('//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,600,700|Roboto:400,500,700')
 
 /* universal */
 
