Finish user signup

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -69,13 +69,10 @@ p
 .feature
 	margin-top: 2em
 
-.footer
-	position: fixed
-	left: 0
-	bottom: 0
+#footer
+	padding: 0.3em
 	width: 100%
 	/* Set the fixed height of the footer here */
-	background-color: #f4f4f4
 	a
 		&:link, &:hover, &:active, &:visited
 			color: $secondary-color
