--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,14 @@
   <%= render 'layouts/navbar' %>
 
   <div class="container" id="main-container">
+    <% flash.each do |message_type, message| %>
+      <div class="alert alert-<%= message_type %>"><%= message %></div>
+    <% end %>
     <%= yield %>
-    <%= render 'layouts/footer' %>
+    <%= debug(params) if Rails.env.development? %>
   </div>
+
+  <%= render 'layouts/footer' %>
 
 </body>
 </html>
