--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,36 +8,29 @@
       </button>
       
       <%= link_to root_path, class: 'navbar-brand' do %>
-        
         <%= image_tag('twitta.png', id: 'logo') %>
       <% end %>
     </div><!-- end navbar header -->
   
     <div class="collapse navbar-collapse" id="main-nav-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <% if @user %>
-          <li class="text-center"><%= link_to "Home", root_path %></li>
-          <li class="text-center"><%= link_to "Help", help_path %></li>
+        <li><%= link_to "Home", root_path %></li>
+        <% if logged_in? %>
+          <li><%= link_to "Users", '#' %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              Account <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Profile", current_user %></li>
+              <li><%= link_to "Settings", '#' %></li>
+              <li class="divider"></li>
+              <li><%= link_to "Help", help_path %></li>
+              <li><%= link_to "Log out", logout_path, method: "delete" %></li>
+            </ul>
+          </li>
         <% else %>
-          <div class="row nav navbar-nav" style="margin-top:0.7em;">
-            <%= form_for(@user) do |f| %>
-              <div class="col-md-5">
-                <li class="">
-                  <%= f.email_field :email, class: "form-control input-sm", placeholder: "Email", tabindex: "1" %>
-                </li>
-              </div>
-
-              <div class="col-md-5">
-                <li class="">
-                  <%= f.password_field :password, class: "form-control input-sm", placeholder: "Password", tabindex: "2" %>
-                </li>
-              </div>
-
-              <div class="col-md-2">
-                <li><%= f.submit "Sign in", class: "btn btn-success btn-sm" %></li>
-              </div>
-            <% end %>
-          </div>
+          <li><%= link_to "Sign in", login_path %></li>
         <% end %>
       </ul>
     </div><!-- end .navbar-collapse -->
