Modify sign in links to direct to modal. Remove home page and duplicate files.

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -30,7 +30,7 @@
             </ul>
           </li>
         <% else %>
-          <li><%= link_to "Sign in", login_path %></li>
+          <li><%= link_to "Sign in", "#", {'data-toggle' => 'modal', 'data-target' => '#login_modal'} %></li>
         <% end %>
       </ul>
     </div><!-- end .navbar-collapse -->
