--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -98,7 +98,7 @@
 				        </div>
 						
 						<div class="form-group">
-				    		<%= f.submit "Log in", class: "btn btn-primary" %>
+				    		<%= f.submit "Sign in", class: "btn btn-block btn-primary" %>
 				    	</div>
 				    <% end %>
 
