Finish user edit, update, index, and destroy actions

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,8 @@
-<% provide(:title, "Home") %>
-<h1>Twitta</h1>
-<p>Home page for users.</p>
+<% provide(:title, "Community") %>
+<h1 class="text-center">Community</h1>
+
+<%= will_paginate %>
+<ul class="users">
+   <%= render @users %>
+</ul>
+<%= will_paginate %>
