--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,7 +4,7 @@
   <div class="col-md-6 col-md-offset-3">
     <h1 class="text-center">Update Profile</h1>
     <%= form_for(@user) do |f| %>
-      <%= render 'shared/error_messages' %>
+      <%= render 'shared/error_messages', object: @user %>
       
       <div class="form-group">
         <%= f.label :name %>
@@ -27,7 +27,7 @@
       </div>
       
       <div class="form-group">
-        <%= f.submit "Save changes", class: "btn btn-primary" %>
+        <%= f.submit "Save Changes", class: "btn btn-primary" %>
       </div>
     <% end %>
 
