--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -80,7 +80,7 @@
 
 			<div class="modal-body">
 				<div class="row">
-				  <div class="col-md-6 col-md-offset-3">
+				  <div class="col-sm-8 col-sm-offset-2">
 				    <%= form_for(:session, url: login_path) do |f| %>
 						<div class="form-group">
 				    		<%= f.label :email %>
