--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -89,6 +89,7 @@
 					
 						<div class="form-group">
 				    		<%= f.label :password %>
+				    		<span class=""><small>(<%= link_to "Forgot your password?", new_password_reset_path %></small>)</span>
 				    		<%= f.password_field :password, class: 'form-control', placeholder: "Password" %>
 				    	</div>
 
@@ -102,7 +103,7 @@
 				    	</div>
 				    <% end %>
 
-				    <p>New user? <%= link_to "Sign up now!", root_path %></p>
+				    <p class="pull-left"><small>New user? <%= link_to "Sign up now!", root_path %></small></p>
 				  </div>
 				</div>
 			</div>
