Change CSS background image url

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -36,7 +36,7 @@ html, html a
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.004) !important
 
 body
-	background-image: url('concrete_seamless.png')
+	background-image: url('images/concrete_seamless.png')
 
 .navbar
 	margin-bottom: 0 !important
