--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -1,10 +1,10 @@
 <!-- <h1>Twitta</h1>
 
-<p>Hi <%= @user.name %>,</p>
+<p>Hi ,</p>
 
 <p>Welcome to Twitta! Click on the link below to activate your account:</p>
 
-<%= link_to "Activate", edit_account_activation_url(@user.activation_token, email: @user.email) %> -->
+ -->
 
 <!doctype html>
 <html>
@@ -198,24 +198,21 @@ ol li {
       <table>
         <tr>
           <td>
-            <p>Hi there,</p>
-            <p>Sometimes all you want is to send a simple HTML email with a basic design.</p>
-            <h1>Really simple HTML email template</h1>
-            <p>This is a really simple email template. Its sole purpose is to get you to click the button below.</p>
+            <p>Hi there, <%= @user.name %>,</p>
+            <p>Sometimes all you want is to post your thoughts without character limit.</p>
+            <h1>Enter Twitta.</h1>
+            <p>Twitta is a new kind of social network, geared towards letting you express your thoughts freely.</p>
             <h2>How do I use it?</h2>
-            <p>All the information you need is on GitHub.</p>
+            <p>If you're receiving this email, chances are you've already signed up. To use Twitta, you must activate your account by clicking the button below.</p>
             <!-- button -->
             <table class="btn-primary" cellpadding="0" cellspacing="0" border="0">
               <tr>
                 <td>
-                  <a href="https://github.com/leemunroe/html-email-template">View the source and instructions on GitHub</a>
+                  <%= link_to "Activate your Twitta account", edit_account_activation_url(@user.activation_token, email: @user.email) %>
                 </td>
               </tr>
             </table>
             <!-- /button -->
-            <p>Feel free to use, copy, modify this email template as you wish.</p>
-            <p>Thanks, have a lovely day.</p>
-            <p><a href="http://twitter.com/leemunroe">Follow @leemunroe on Twitter</a></p>
           </td>
         </tr>
       </table>
@@ -239,7 +236,7 @@ ol li {
         <table>
           <tr>
             <td align="center">
-              <p>Don't like these annoying emails? <a href="#"><unsubscribe>Unsubscribe</unsubscribe></a>.
+              <p>Don't want anymore emails from us? <a href="#"><unsubscribe>Unsubscribe</unsubscribe></a>.
               </p>
             </td>
           </tr>
