--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,7 +4,7 @@
   <div class="col-md-6 col-md-offset-3">
     <h1 class="text-center">Update Profile</h1>
     <%= form_for(@user) do |f| %>
-      <%= render 'shared/error_messages', object: @user %>
+      <%= render 'shared/error_messages', object: f.object %>
       
       <div class="form-group">
         <%= f.label :name %>
