--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -17,12 +17,12 @@
 		</div>
 	</div>
 
-	<div class="col-md-5 col-md-offset-1">
+	<div class="col-md-6">
 		<div class="row">
 		    <div class="">
 			    <%= form_for(@user) do |f| %>
 			    	<h1>Sign Up <small>It's free and always will be.</small></h1>
-			    	<%= render 'shared/error_messages' %>
+			    	<%= render 'shared/error_messages', object: f.object %>
 
 			    	<div class="form-group">
 			    		<%= f.label :name %>
