--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,23 @@
 <% provide(:title, @user.name) %>
 <div class="row">
-  <aside class="col-md-4">
-    <section class="user_info">
-      <h1>
-        <%= gravatar_for @user %>
-        <%= @user.name %>
-      </h1>
-    </section>
-  </aside>
-  <div class="col-md-8">
-    <% if @user.microposts.any? %>
-      <ol class="microposts" id="other-user-microposts">
-        <%= render @microposts %>
-      </ol>
-      <%= will_paginate @microposts %>
-    <% end %>
+    <aside class="col-md-3">
+      <section class="user_info">
+        <%= link_to gravatar_for(@user), @user %>
+        <h1><%= @user.name %></h1>
+        <span><%= pluralize(@user.microposts.count, "micropost") %></span>
+      </section>
+    </aside>
+    <div class="col-md-6">
+      <section class="micropost-feed">
+        <% if @feed_items.any? %>
+          <ol class="microposts" id="show-feed">
+            <%= render @feed_items %>
+          </ol>
+          <%= will_paginate @feed_items %>
+        <% end %>
+      </section>
+    </div>
+    <div class="col-md-3">
+      
+    </div>
   </div>
-</div>
