--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -104,6 +104,44 @@ aside {
   }
 }
 
+.stats {
+  overflow: auto;
+  // margin-top: 0;
+  // padding: 0;
+  a {
+    float: left;
+    padding: 0 10px;
+    border-left: 1px solid $gray-lighter;
+    color: gray;
+    &:first-child {
+      padding-left: 0;
+      border: 0;
+    }
+    &:hover {
+      text-decoration: none;
+      color: blue;
+    }
+  }
+  strong {
+    display: block;
+  }
+}
+
+.user_avatars {
+  overflow: auto;
+  margin-top: 10px;
+  .gravatar {
+    margin: 1px 1px;
+  }
+  a {
+    padding: 0;
+  }
+}
+
+.users.follow {
+  padding: 0;
+}
+
 /* microposts */
 
 .user_info {
@@ -170,7 +208,7 @@ aside {
 
 #show-feed {
   margin-top: 20px;
-  
+
   li:first-of-type {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
