--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -119,7 +119,7 @@ aside {
     }
     &:hover {
       text-decoration: none;
-      color: blue;
+      color: #1d1c1d;
     }
   }
   strong {
@@ -136,6 +136,10 @@ aside {
   a {
     padding: 0;
   }
+}
+
+#username {
+  color: grey;
 }
 
 .users.follow {
@@ -188,10 +192,10 @@ aside {
   }
   .content {
     display: block;
+    word-wrap: break-word;
     img {
       display: block;
       padding: 0px 0;
-      margin-left: 55px;
     }
     margin-bottom: 6px;
   }
@@ -200,7 +204,7 @@ aside {
   }
   .gravatar {
     margin-right: 10px;
-    max-width: 48px;
+    max-width: 68px;
     border-radius: 3px;
     // margin-top: 5px;
   }
@@ -244,7 +248,7 @@ span.picture {
 }
 
 .options {
-  margin-left: 60px;
+
 }
 
 .options-icon {
