--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,4 +1,5 @@
 <%= link_to gravatar_for(current_user), current_user %>
 <h1><%= current_user.name %></h1>
+<p><small id="username">@<%= current_user.username %></small></p>
 <span><%= link_to "view my profile", current_user %></span><br>
 <span><%= pluralize(current_user.microposts.count, "micropost") %></span>
