--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,9 @@
 <li>
   <%= gravatar_for user, size: 50 %>
   <%= link_to user.name, user %>
+  <span id="username">
+    @<%= user.username %>
+  </span>
   <% if current_user.admin? && !current_user?(user) %>
   	| <%= link_to "delete", user, method: :delete,
   								  data: { confirm: "Are you sure you want to delete this user?" } %>
