--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,20 +2,23 @@
 <div class="row">
     <aside class="col-md-3">
       <section class="user_info">
-        <%= render 'shared/user_info' %>
+        <%= link_to gravatar_for(@user), @user %>
+        <h1><%= @user.name %></h1>
+        <span><%= link_to "view my profile", @user %></span><br>
+        <span><%= pluralize(@user.microposts.count, "micropost") %></span>
         <section class="stats">
           <%= render 'shared/stats' %>
         </section>
+        <%= render 'follow_form' if logged_in? %>
       </section>
     </aside>
     <div class="col-md-6">
       <section class="micropost-feed">
-        <%= render 'follow_form' if logged_in? %>
-        <% if @feed_items.any? %>
+        <% if @microposts.any? %>
           <ol class="microposts" id="show-feed">
-            <%= render @feed_items %>
+            <%= render @microposts %>
           </ol>
-          <%= will_paginate @feed_items %>
+          <%= will_paginate @microposts %>
         <% end %>
       </section>
     </div>
