--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,11 +5,16 @@
     <h1 class="text-center">Update Profile</h1>
     <%= form_for(@user) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
-      
+
       <div class="form-group">
         <%= f.label :name %>
         <%= f.text_field :name, class: 'form-control' %>
       </div>
+
+      <div class="form-group">
+    		<%= f.label :username %>
+    		<%= f.username_field :username, class: "form-control" %>
+    	</div>
 
       <div class="form-group">
         <%= f.label :email %>
@@ -25,7 +30,7 @@
         <%= f.label :password_confirmation, "Confirmation" %>
         <%= f.password_field :password_confirmation, class: 'form-control' %>
       </div>
-      
+
       <div class="form-group">
         <%= f.submit "Save Changes", class: "btn btn-primary" %>
       </div>
