--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -28,31 +28,36 @@
 			    		<%= f.label :name %>
 			    		<%= f.text_field :name, class: "form-control input-lg", placeholder: "Full Name", tabindex: "3" %>
 			    	</div>
-			    	
+
+						<div class="form-group">
+							<%= f.label :username %>
+							<%= f.username_field :username, class: "form-control input-lg", placeholder: "Username", tabindex: "4" %>
+						</div>
+
 			    	<div class="form-group">
 			    		<%= f.label :email %>
-			    		<%= f.email_field :email, class: "form-control input-lg", placeholder: "Email", tabindex: "4" %>
+			    		<%= f.email_field :email, class: "form-control input-lg", placeholder: "Email", tabindex: "5" %>
 			    	</div>
 
 			    	<div class="form-group">
 			    		<%= f.label :password %>
-			    		<%= f.password_field :password, class: "form-control input-lg", placeholder: "Password", tabindex: "5" %>
+			    		<%= f.password_field :password, class: "form-control input-lg", placeholder: "Password", tabindex: "6" %>
 			    	</div>
 
 			    	<div class="form-group">
 			    		<%= f.label :password_confirmation %>
-			    		<%= f.password_field :password_confirmation, class: "form-control input-lg", placeholder: "Confirm Password", tabindex: "6" %>
+			    		<%= f.password_field :password_confirmation, class: "form-control input-lg", placeholder: "Confirm Password", tabindex: "7" %>
 			    	</div>
-			    	
+
 			    	<div class="row">
 			    		<div class="col-xs-10 col-sm-12 col-md-12">
-			    			By clicking 
+			    			By clicking
 			    			<strong class="label label-primary">
 			    				Create my account
-			    			</strong>, you agree to the <%= link_to "Terms and Conditions", "#", {'data-toggle' => 'modal', 'data-target' => '#t_and_c_m'} %> set out by this site, including our Cookie Use. 
+			    			</strong>, you agree to the <%= link_to "Terms and Conditions", "#", {'data-toggle' => 'modal', 'data-target' => '#t_and_c_m'} %> set out by this site, including our Cookie Use.
 			    		</div>
 			    	</div>
-			    	
+
 			    	<hr class="colorgraph">
 
 			    	<div class="form-group">
@@ -86,7 +91,7 @@
 				    		<%= f.label :email %>
 				    		<%= f.email_field :email, class: 'form-control', placeholder: "Email" %>
 				    	</div>
-					
+
 						<div class="form-group">
 				    		<%= f.label :password %>
 				    		<span class=""><small>(<%= link_to "Forgot your password?", new_password_reset_path %></small>)</span>
@@ -97,7 +102,7 @@
 				            <%= f.check_box :remember_me %>
 				            <span>Remember me on this computer</span>
 				        </div>
-						
+
 						<div class="form-group">
 				    		<%= f.submit "Sign in", class: "btn btn-block btn-primary" %>
 				    	</div>
@@ -132,14 +137,14 @@
 				<p>Neither we nor any third parties provide any warranty or guarantee as to the accuracy, timeliness, performance, completeness or suitability of the information and materials found or offered on this website for any particular purpose. You acknowledge that such information and materials may contain inaccuracies or errors and we expressly exclude liability for any such inaccuracies or errors to the fullest extent permitted by law.</p>
 
 				<p>Your use of any information or materials on this website is entirely at your own risk, for which we shall not be liable. It shall be your own responsibility to ensure that any products, services or information available through this website meet your specific requirements.</p>
-				
+
 				<p>This website contains material which is owned by or licensed to us. This material includes, but is not limited to, the design, layout, look, appearance and graphics. Reproduction is prohibited other than in accordance with the copyright notice, which forms part of these terms and conditions.</p>
 
 				<p>All trade marks reproduced in this website which are not the property of, or licensed to, the operator are acknowledged on the website.
 				Unauthorized use of this website may give rise to a claim for damages and/or be a criminal offence.</p>
 
 				<p>From time to time this website may also include links to other websites. These links are provided for your convenience to provide further information. They do not signify that we endorse the website(s). We have no responsibility for the content of the linked website(s).</p>
-				
+
 				<p>Your use of this website and any dispute arising out of such use of the website is subject to the laws of the United States.</p>
 			</div>
 			<div class="modal-footer">
@@ -148,4 +153,3 @@
 		</div><!-- /.modal-content -->
 	</div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
-
