--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,9 +12,9 @@
       </div>
 
       <div class="form-group">
-    		<%= f.label :username %>
-    		<%= f.username_field :username, class: "form-control" %>
-    	</div>
+        <%= f.label :username %>
+        <%= f.text_field :username, class: 'form-control' %>
+      </div>
 
       <div class="form-group">
         <%= f.label :email %>
