--- a/app/views/shared/_user_info_form.html.erb
+++ b/app/views/shared/_user_info_form.html.erb
@@ -9,7 +9,7 @@
 
 	<div class="form-group">
 		<%= f.label :username %>
-		<%= f.username_field :username, class: "form-control input-lg", placeholder: "Username", tabindex: "4" %>
+		<%= f.text_field :username, class: "form-control input-lg", placeholder: "Username", tabindex: "4" %>
 	</div>
 
 	<div class="form-group">
