--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -30,9 +30,9 @@
 			    	</div>
 
 						<div class="form-group">
-							<%= f.label :username %>
-							<%= f.username_field :username, class: "form-control input-lg", placeholder: "Username", tabindex: "4" %>
-						</div>
+			        <%= f.label :username %>
+			        <%= f.text_field :username, class: "form-control input-lg", placeholder: "Username", tabindex: "4" %>
+			      </div>
 
 			    	<div class="form-group">
 			    		<%= f.label :email %>
