Add hover styles to follow button

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -219,6 +219,14 @@ aside {
   }
 }
 
+.unfollow, .follow-wrapper:hover .following {
+    display: none;
+}
+
+.follow-wrapper:hover .unfollow {
+    display: inline;
+}
+
 .microposts {
   list-style: none;
   padding: 0;
