--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -11,6 +11,10 @@
                     <small> &middot; <%= time_ago_in_words(@micropost.created_at) %> ago</small>
               </span>
             </span>
+
+            <div class="pull-right">
+              <%= render 'users/follow_form' if logged_in? %>
+            </div>
         </div>
 
         <div class="row">
