Modify mailer for accuracy

--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -50,12 +50,12 @@ a {
 }
 
 .btn-primary td {
-  background-color: #348eda; 
+  background-color: #348eda;
   border-radius: 25px;
-  font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-  font-size: 14px; 
+  font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-size: 14px;
   text-align: center;
-  vertical-align: top; 
+  vertical-align: top;
 }
 
 .btn-primary td a {
@@ -102,13 +102,13 @@ table.body-wrap .container {
 ------------------------------------- */
 table.footer-wrap {
   clear: both !important;
-  width: 100%;  
+  width: 100%;
 }
 
 .footer-wrap .container p {
   color: #666666;
   font-size: 12px;
-  
+
 }
 
 table.footer-wrap a {
@@ -119,8 +119,8 @@ table.footer-wrap a {
 /* -------------------------------------
     TYPOGRAPHY
 ------------------------------------- */
-h1, 
-h2, 
+h1,
+h2,
 h3 {
   color: #111111;
   font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
@@ -139,15 +139,15 @@ h3 {
   font-size: 22px;
 }
 
-p, 
-ul, 
+p,
+ul,
 ol {
   font-size: 14px;
   font-weight: normal;
   margin-bottom: 10px;
 }
 
-ul li, 
+ul li,
 ol li {
   margin-left: 5px;
   list-style-position: inside;
@@ -199,9 +199,9 @@ ol li {
         <tr>
           <td>
             <p>Hi there, <%= @user.name %>,</p>
-            <p>Sometimes all you want is to post your thoughts without character limit.</p>
+            <p>Sometimes all you want is to post your thoughts freely.</p>
             <h1>Enter Twitta.</h1>
-            <p>Twitta is a new kind of social network, geared towards letting you express your thoughts freely.</p>
+            <p>Twitta is a new kind of social network, geared towards letting you express your thoughts, via stream of consciousness.</p>
             <h2>How do I use it?</h2>
             <p>If you're receiving this email, chances are you've already signed up. To use Twitta, you must activate your account by clicking the button below.</p>
             <!-- button -->
@@ -218,7 +218,7 @@ ol li {
       </table>
       </div>
       <!-- /content -->
-      
+
     </td>
     <td></td>
   </tr>
@@ -230,7 +230,7 @@ ol li {
   <tr>
     <td></td>
     <td class="container">
-      
+
       <!-- content -->
       <div class="content">
         <table>
@@ -243,7 +243,7 @@ ol li {
         </table>
       </div>
       <!-- /content -->
-      
+
     </td>
     <td></td>
   </tr>
